8207965: C2-only debug build fails

Reviewed-by: kvn, iignatyev