test/hotspot/jtreg/compiler/onSpinWait/TestOnSpinWaitC1.java
@@ -23,12 +23,13 @@
  */
 
 /**
- * @test TestOnSpinWait
+ * @test TestOnSpinWaitC1
  * @summary (x86 only) checks that java.lang.Thread.onSpinWait is intrinsified
  * @bug 8147844
  * @library /test/lib
  * @modules java.base/jdk.internal.misc
  * @requires os.arch=="x86" | os.arch=="amd64" | os.arch=="x86_64"
+ * @requires vm.compiler1.enabled
  * @run driver compiler.onSpinWait.TestOnSpinWait
  */
 
@@ -37,24 +38,21 @@ package compiler.onSpinWait;
 import jdk.test.lib.process.OutputAnalyzer;
 import jdk.test.lib.process.ProcessTools;
 
-public class TestOnSpinWait {
+public class TestOnSpinWaitC1 {
 
     public static void main(String[] args) throws Exception {
-        // Test C2 compiler
+
+        // Test C1 compiler
         ProcessBuilder pb = ProcessTools.createJavaProcessBuilder(
           "-XX:+IgnoreUnrecognizedVMOptions", "-showversion",
-          "-XX:-TieredCompilation", "-Xbatch",
+          "-XX:+TieredCompilation", "-XX:TieredStopAtLevel=1", "-Xbatch",
           "-XX:+PrintCompilation", "-XX:+UnlockDiagnosticVMOptions",
           "-XX:+PrintInlining", Launcher.class.getName());
 
         OutputAnalyzer analyzer = new OutputAnalyzer(pb.start());
 
         analyzer.shouldHaveExitValue(0);
-
-        // The test is applicable only to C2 (present in Server VM).
-        if (analyzer.getStderr().contains("Server VM")) {
-            analyzer.shouldContain("java.lang.Thread::onSpinWait (1 bytes)   (intrinsic)");
-        }
+        analyzer.shouldContain("java.lang.Thread::onSpinWait (1 bytes)   intrinsic");
     }
 
     static class Launcher {
