test/hotspot/jtreg/serviceability/sa/ClhsdbFindPC.java
@@ -27,12 +27,12 @@ import java.util.Map;
 import java.util.ArrayList;
 
 import jdk.test.lib.apps.LingeredApp;
-
 /**
  * @test
  * @bug 8193124
  * @summary Test the clhsdb 'findpc' command
  * @requires vm.hasSA
+ * @requires vm.compiler1.enabled
  * @library /test/lib
  * @run main/othervm ClhsdbFindPC
  */
